# CEDT-Chula-AgentWorkshop

./: .env.example  .gitignore  CEDT_Miniworkshop.ipynb  README.md  pyproject.toml
academic_research/: agent.py  prompt.py
academic_research/sub_agents/academic_newresearch/: prompt.py
academic_research/sub_agents/academic_websearch/: prompt.py
academic_research/sub_agents/weather_agent/: __init__.py  agent.py  prompt.py  tools.py
